Change header to fixed for z-index compatibility

--- a/sass/_page-env.scss
+++ b/sass/_page-env.scss
@@ -3,12 +3,19 @@
     main {
         margin-top: 40px;
         header {
+            width: auto;
             padding: 20px 25px;
+            position: fixed;
             overflow: hidden;
             text-align: left;
+            z-index: 2;
             hgroup {
                 float: left;
                 width: 100%;
+            }
+            h1 {
+                width: 100%;
+                margin-left: 65px;
             }
             a {
                 margin-top: 4px;
@@ -148,6 +155,7 @@
 
 .env-data-pod--time {
     width: 325px;
+    top: 160px;
     left: 20px;
     transition: background .3s;
     &:hover {
@@ -167,8 +175,8 @@
 
 .env-data-pod--people {
     width: 325px;
-    top: 150px;
     left: 20px;
+    background: red;
 }
 
 .env-data-pod--nearby {
